apps/audiomuse-ai/audiomuse-ai/statefulset-audiomuse-ai-flask.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audiomuse-ai-flask
  labels:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: audiomuse-ai
    app.kubernetes.io/component: flask
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: audiomuse-ai
      app.kubernetes.io/instance: audiomuse-ai
      app.kubernetes.io/component: flask
  serviceName: audiomuse-ai-flask-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiomuse-ai
        app.kubernetes.io/instance: audiomuse-ai
        app.kubernetes.io/component: flask
    spec:
      serviceAccountName: audiomuse-ai
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: flask-app
          image: ghcr.io/neptunehub/audiomuse-ai
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: app-temp-audio
              mountPath: /app/temp_audio
            - name: plugins-storage
              mountPath: /app/plugin/installed
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 30m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: app-temp-audio
          emptyDir: {}
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: plugins-storage
        labels:
          app.kubernetes.io/name: audiomuse-ai
          app.kubernetes.io/instance: audiomuse-ai
          app.kubernetes.io/component: flask
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
