apps/audiomuse-ai/audiomuse-ai/service-audiomuse-ai-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiomuse-ai-flask-service
  labels:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: audiomuse-ai
    app.kubernetes.io/component: flask
spec:
  selector:
    app.kubernetes.io/name: audiomuse-ai
    app.kubernetes.io/instance: audiomuse-ai
    app.kubernetes.io/component: flask
  ports:
    - name: http
      appProtocol: http
      protocol: TCP
      port: 8000
      targetPort: http
